--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,65 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+ul,ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+h1,h2,h3,h4,h5,h6,p {
+  margin: 0;
+}
+
+#categories {
+ width: 392px;
+ margin: 0 auto;
+}
+
+.item {
+  width: 392px;
+  padding: 16px;
+    background: #F6F6FE;
+    border-radius: 8px;
+    margin-bottom: 24px;
+  
+}
+
+.item h2 {
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    color: #2E2F42;
+  margin-bottom: 16px;
+  }
+ .item li {
+/* Rectangle 8 */
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+  margin-bottom: 8px;
+ }
+
+ .gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+  width: 1128px;
+  margin: 0 auto;
+  }
+
+ .gallery li {
+  width: 360px;
+  width: calc((100% - 24px * 2) / 3);
+ }
+
+ .gallery img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+ }
